<resources>
    <string name="app_name">UJALA</string>

    //BottomNav titles
    <string name="bottomnav_home">HOME</string>
    <string name="bottomnav_settings">SETTINGS</string>

    <string name="username">Username</string>
    <string name="status">Status</string>
    <string name="monitor">Allow Monitoring?</string>
    <string name="signin">Sign In</string>
    <string name="signout">Sign Out</string>
    <string name="signedin">Signed In</string>
    <string name="signedout">Signed Out</string>
    <string name="guest">Guest</string>

    <string name="map_api">AIzaSyBX-c0oVJZDt8gwtoqGppDS7PABK9BU1zQ</string>
    <string name="web_client_id">373964646119-iasuiaj9r2tigh2rnlap3ucfao7v8idc.apps.googleusercontent.com</string>
    <string name="last_5_mins_text">Last 5 Mins data</string>
    <string name="last_1_hour_text">Last 1 Hour data</string>

    <string name="disclaimer">Disclaimer /\nPrivacy Policy</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="disclaimer_body">We at Team Ujala respect your privacy and understand your concerns.\n\n
    Through the application, Ujala, the team collects the user\'s email address, charging state and location (Latitude, Longitude and Pincode) and store it in the Ujala database.\n\n
    This information that is collected from the users is not available publicly but it is used by the team to provide the users with the power outages log data.\n\n
    The team, however, reserves the right to use the data as per the requirements but limited to academic or research purposes only.</string>

    <string name="about">About Team Gridwatch</string>

    <!--    map style for dark theme-->
    <string name="map_style_json">[   {     \"elementType\": \"geometry\",     \"stylers\": [       {         \"color\": \"#242f3e\"       }     ]   },   {     \"elementType\": \"labels.text.fill\",     \"stylers\": [       {         \"color\": \"#746855\"       }     ]   },   {     \"elementType\": \"labels.text.stroke\",     \"stylers\": [       {         \"color\": \"#242f3e\"       }     ]   },   {     \"featureType\": \"administrative.locality\",     \"elementType\": \"labels.text.fill\",     \"stylers\": [       {         \"color\": \"#d59563\"       }     ]   },   {     \"featureType\": \"poi\",     \"elementType\": \"labels.text.fill\",     \"stylers\": [       {         \"color\": \"#d59563\"       }     ]   },   {     \"featureType\": \"poi.park\",     \"elementType\": \"geometry\",     \"stylers\": [       {         \"color\": \"#263c3f\"       }     ]   },   {     \"featureType\": \"poi.park\",     \"elementType\": \"labels.text.fill\",     \"stylers\": [       {         \"color\": \"#6b9a76\"       }     ]   },   {     \"featureType\": \"road\",     \"elementType\": \"geometry\",     \"stylers\": [       {         \"color\": \"#38414e\"       }     ]   },   {     \"featureType\": \"road\",     \"elementType\": \"geometry.stroke\",     \"stylers\": [       {         \"color\": \"#212a37\"       }     ]   },   {     \"featureType\": \"road\",     \"elementType\": \"labels.text.fill\",     \"stylers\": [       {         \"color\": \"#9ca5b3\"       }     ]   },   {     \"featureType\": \"road.highway\",     \"elementType\": \"geometry\",     \"stylers\": [       {         \"color\": \"#746855\"       }     ]   },   {     \"featureType\": \"road.highway\",     \"elementType\": \"geometry.stroke\",     \"stylers\": [       {         \"color\": \"#1f2835\"       }     ]   },   {     \"featureType\": \"road.highway\",     \"elementType\": \"labels.text.fill\",     \"stylers\": [       {         \"color\": \"#f3d19c\"       }     ]   },   {     \"featureType\": \"transit\",     \"elementType\": \"geometry\",     \"stylers\": [       {         \"color\": \"#2f3948\"       }     ]   },   {     \"featureType\": \"transit.station\",     \"elementType\": \"labels.text.fill\",     \"stylers\": [       {         \"color\": \"#d59563\"       }     ]   },   {     \"featureType\": \"water\",     \"elementType\": \"geometry\",     \"stylers\": [       {         \"color\": \"#17263c\"       }     ]   },   {     \"featureType\": \"water\",     \"elementType\": \"labels.text.fill\",     \"stylers\": [       {         \"color\": \"#515c6d\"       }     ]   },   {     \"featureType\": \"water\",     \"elementType\": \"labels.text.stroke\",     \"stylers\": [       {         \"color\": \"#17263c\"       }     ]   } ]</string>

</resources>
