<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


<!--        Option 1: Username begins-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_account"
                android:layout_gravity="center"
                android:tint="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp">

            <TextView
                android:id="@+id/textview_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <TextView
                android:id="@+id/textview_username_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            </LinearLayout>

        </LinearLayout>

<!--        Option 1: Username ends-->

<!--        Option 2: Allow Monitoring? begins-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_monitoring"
                android:layout_gravity="center"
                android:tint="@color/colorAccent"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical"
                android:layout_marginStart="20dp" >

                <TextView
                    android:id="@+id/allow_monitoring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monitor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Enabled/Disabled"/>

            </LinearLayout>

            <Switch
                android:id="@+id/switch_monitor_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:checked="true" />

        </LinearLayout>

<!--        Option 2: Allow Monitoring? ends-->

<!--        Option 3: Rankings begins-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_rankings"
                android:layout_gravity="center"
                android:tint="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp">


            <TextView
                android:id="@+id/rankings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rankings" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Score"/>


            </LinearLayout>

        </LinearLayout>

<!--        Option 3: Rankings ends-->

<!--        Option 4: Theme begins-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_theme"
                android:layout_gravity="center"
                android:tint="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp">


                <TextView
                    android:id="@+id/theme_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Theme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Light/Dark"/>

            </LinearLayout>


        </LinearLayout>

<!--        Option 4: Theme ends-->

<!--        Option 5: Help begins-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_help"
            android:layout_gravity="center"
            android:tint="@color/colorAccent"/>


        <TextView
            android:id="@+id/help_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Help"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"/>


    </LinearLayout>


<!--        Option 5: Help ends-->

<!--        Option 6: Feedback begins-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_feedback"
            android:layout_gravity="center"
            android:tint="@color/colorAccent"/>

        <TextView
            android:id="@+id/feedback_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:text="Feedback" />


    </LinearLayout>

<!--        Option 6: Feedback ends-->

<!--        Option 7: About begins-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_about"
                android:layout_gravity="center"
                android:tint="@color/colorAccent" />


            <TextView
                android:id="@+id/about_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:text="About" />


        </LinearLayout>


<!--        Option 7: About ends-->

<!--        Sign-in and Sign-out buttons begin-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_signin_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="20dp"
                android:text="@string/signin"
                style="@style/Widget.AppCompat.Button.Colored"/>

            <Button
                android:id="@+id/button_signout_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="20dp"
                android:text="@string/signout"
                style="@style/Widget.AppCompat.Button.Colored"/>


        </LinearLayout>

<!--        Sign-in and Sign-out buttons end-->

    </LinearLayout>


</ScrollView>